@@ -22,6 +22,9 @@
 v0.8.0
 - Refactor of core inventory and tiles for streamlined code reuse
 
+MODIS
+- fixed bug in MODIS temperature making them unable to be used in project (multiple identical output band names)
+
 v0.7.1
 - Better internal handling of sensors for data where there can be multiple sensors on a single day
 - Tile projects (no shapefile or nomosaic set) now creates subdirectories for each tile in project folder
